--- a/day04/day04.html
+++ b/day04/day04.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Day04-调试技巧</title>
+    <script src="./day04.js"></script>
+    <link rel="stylesheet" href="./day04.css">
 </head>
 <body>
-    
+    <h1 class="title">给自己鼓励的一句话</h1>
+    <div id="content"></div>
+    <div class="button" onclick="addText()">鼓励自己一下</div>
 </body>
 </html>
