--- a/day03/day03.html
+++ b/day03/day03.html
@@ -34,5 +34,26 @@
 </head>
 <body>
     <p>这是测试标签</p>
+    <!-- 常用新标签 -->
+    <header>语义：定义页面的头部，页眉</header>
+    <nav>语义：定义导航栏链接的部分</nav>
+    <footer>语义：定义页面底部，页脚</footer>
+    <article>语义：定义文章，常用语大幅描述等</article>
+    <section>语义：定义小节或区域</section>
+    <aside>语义：定义侧边，功能导航</aside>
+    <input type="text" placeholder="请输入明星" list="star">
+    <datalist id="star">语义：标签定义选项列表，常配合input使用
+        <option>张韶涵</option>
+        <option>林俊杰</option>
+        <option>周杰伦</option>
+        <option>小刚</option>
+    </datalist>
+    <fieldset>语义：可将表单内的相关元素分组，搭配legend使用</fieldset>
+
+    <fieldset>
+        <legend>登录</legend>
+        用户名：<input type="text"><br/><br/>
+        密码：<input type="password">
+    </fieldset>
 </body>
 </html>
